...
  }, [])

  const steps = useMemo<OnboardingStep[]>(
    () => [
      {
        type: "image",
        name: "Welcome to Veiller",
        transition: true,
        duration: 500,
        title: translate("onboarding:osWelcomeTitle"),
        subtitle: translate("onboarding:osWelcomeSubtitle"),
        titleCentered: true,
        subtitleCentered: true,
...
